# api/handler/auth_handler.go
@@ -20,8 +20,8 @@ type AuthHandler struct {
 // @Produce      json
 // @Param        request body io.SignUpRequest true "sign up request"
 // @Success      201 {object} domain.User
-// @Failure      400
-// @Failure      500
+// @Failure      400 {object} io.ErrorResponse
+// @Failure      500 {object} io.ErrorResponse
 // @Router       /sign_up [post]
 func (h AuthHandler) SignUp(c echo.Context) error {
 	req := new(io.SignUpRequest)
@@ -47,8 +47,8 @@ func (h AuthHandler) SignUp(c echo.Context) error {
 // @Produce      json
 // @Param        request body io.SignInRequest true "sign in request"
 // @Success      200 {object} io.SignInResponse
-// @Failure      400
-// @Failure      500
+// @Failure      400 {object} io.ErrorResponse
+// @Failure      500 {object} io.ErrorResponse
 // @Router       /sign_in [post]
 func (h AuthHandler) SignIn(c echo.Context) error {
 	req := new(io.SignInRequest)
