# api/handler/project_handler.go
@@ -66,10 +66,10 @@ func (h ProjectHandler) Create(c echo.Context) error {
 // @Accept       json
 // @Produce      json
 // @Param 	 	 project_id path int true "project_id"
-// @Success      200  {object}  domain.Project
-// @Failure      400
-// @Failure      404
-// @Failure      500
+// @Success      200 {object}  domain.Project
+// @Failure      400 {object} io.ErrorResponse
+// @Failure      404 {object} io.ErrorResponse
+// @Failure      500 {object} io.ErrorResponse
 // @Router       /projects/{project_id} [get]
 func (h ProjectHandler) Get(c echo.Context) error {
 	req := new(io.GetProjectRequest)
@@ -93,10 +93,10 @@ func (h ProjectHandler) Get(c echo.Context) error {
 // @Produce      json
 // @Param 	 	 project_id path int true "project_id"
 // @Param 	 	 request body io.UpdateProjectRequest true "request"
-// @Success      200  {object}  domain.Project
-// @Failure      400
-// @Failure      404
-// @Failure      500
+// @Success      200 {object}  domain.Project
+// @Failure      400 {object} io.ErrorResponse
+// @Failure      404 {object} io.ErrorResponse
+// @Failure      500 {object} io.ErrorResponse
 // @Router       /projects/{project_id} [put]
 func (h ProjectHandler) Update(c echo.Context) error {
 	req := new(io.UpdateProjectRequest)
@@ -119,10 +119,10 @@ func (h ProjectHandler) Update(c echo.Context) error {
 // @Accept       json
 // @Produce      json
 // @Param 	 	 project_id path int true "project_id"
-// @Success      200  {object}  domain.Project
-// @Failure      400
-// @Failure      404
-// @Failure      500
+// @Success      200 {object}  domain.Project
+// @Failure      400 {object} io.ErrorResponse
+// @Failure      404 {object} io.ErrorResponse
+// @Failure      500 {object} io.ErrorResponse
 // @Router       /projects/{project_id} [delete]
 func (h ProjectHandler) Delete(c echo.Context) error {
 	req := new(io.DeleteProjectRequest)
